correct image url in style and index files

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <section class="about">
         <img
-          src="images/queso-taco.png"
+          src="tacohut/images/queso-taco.png"
           alt="Yummy Taco"
           class="about__mockup"
         />
